--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=TAPscan
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=tapscan_breeze
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=TAPscan
+DB_USERNAME=tapuser
+DB_PASSWORD="TAPscan_password"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -20,9 +20,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=memcached
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
