--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
             LARAVEL_SAIL: 1
         volumes:
             - '.:/var/www/html'
+            - './_data:/data'
         # network_mode: host
         networks:
             - sail
@@ -33,7 +34,6 @@ services:
             MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
         volumes:
             - 'sailmysql:/var/lib/mysql'
-            - '/home/deepti/TAPscan-v4-main/tmpdb:/home/deepti'
         networks:
             - sail
         healthcheck:
