--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 # For more information: https://laravel.com/docs/sail
 version: '3'
 services:
-    laravel.ananas:
+    laravel.tapscan:
         build:
             context: ./vendor/laravel/sail/runtimes/8.2
             dockerfile: Dockerfile
@@ -16,18 +16,16 @@ services:
         volumes:
             - '.:/var/www/html'
             - './_data:/data'
-        # network_mode: host
         networks:
             - sail
         depends_on:
-            - mysql.ananas
+            - mysql.tapscan
         healthcheck:
           test: ["CMD", 'curl', 'http://localhost:80']
 
-    mysql.ananas:
+    mysql.tapscan:
         image: mysql:8.0
         ports:
-            # - '${FORWARD_DB_PORT:-3306}:3306'
             - '3307:3306'
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
@@ -40,7 +38,6 @@ services:
         networks:
             - sail
         healthcheck:
-          #test: ["CMD", "mysqladmin", "ping"]
           test: ["CMD", 'mysqladmin', 'ping', '-h', 'localhost', '-u', 'root', '-p$$MYSQL_ROOT_PASSWORD']
 networks:
     sail:
