--- a/.env
+++ b/.env
@@ -1,14 +1,15 @@
 APP_NAME=TAPscan
-APP_SERVICE=laravel.ananas
+APP_SERVICE=laravel.tapscan
 APP_ENV=local
-APP_KEY=base64:KrLRFJrpjsaFyVpb+xraDiv+MMX+6jg2cFgtnLTOIpA=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
+
 DB_CONNECTION=mysql
-DB_HOST=mysql.ananas
+DB_HOST=mysql.tapscan
 DB_PORT=3306
 DB_DATABASE=TAPscan
 DB_USERNAME=tapuser
