--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "maatwebsite/excel": "^3.1",
         "okipa/laravel-table": "^4.0",
         "rap2hpoutre/fast-excel": "^5.3",
+        "silber/page-cache": "^1.0",
         "spatie/laravel-searchable": "^1.11",
         "yajra/laravel-datatables": "^1.0"
     },
