add hint about production settings

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=TAPscan
 APP_SERVICE=laravel.tapscan
-APP_ENV=local
+APP_ENV=local # change to prod when in production to force https
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
