--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_NAME=TAPscan
 APP_SERVICE=laravel.tapscan
-APP_ENV=local # change to prod when in production to force https
+APP_ENV=production # change to production when in production to force https
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=http://localhost/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
