--- a/.github/workflows/check-website-health.yml
+++ b/.github/workflows/check-website-health.yml
@@ -11,7 +11,7 @@ jobs:
       uses: jtalk/url-health-check-action@v4
       with:
         # Check the following URLs one by one sequentially
-        url: https://tapscan.plantcode.cup.uni-freiburg.de|https://tapscan.plantcode.cup.uni-freiburg.de/about
+        url: https://tapscan.plantcode.cup.uni-freiburg.de|https://tapscan.plantcode.cup.uni-freiburg.de/about|http://sasje.nl
         # Follow redirects, or just report success on 3xx status codes
         follow-redirect: true # Optional, defaults to "false"
         # Fail this action after this many failed attempts
