--- a/.github/workflows/check-website-health.yml
+++ b/.github/workflows/check-website-health.yml
@@ -2,7 +2,7 @@ name: "[Cron] Check TAPscan Website Health"
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 8 * * *' # every morning at 8:00
+    - cron: '0 6 * * *' # every morning at 6:00 UTC
 jobs:
   runner-job:
     runs-on: ubuntu-latest
